preset: add mask directive
This patch extends the preset policy by adding a new "mask" directive, to also
allow masking unit files.

The only difference with the regular mask operation is that if a unit is masked
via preset, and there is a change in the preset policy enabling/disabling that
unit, applying presets again should effectively enable/disable it.

Closes #33181

--- a/shell-completion/bash/systemctl.in
+++ b/shell-completion/bash/systemctl.in
@@ -178,7 +178,7 @@ _systemctl () {
                 comps=$(__systemd_properties)
                 ;;
             --preset-mode)
-                comps='full enable-only disable-only'
+                comps='full enable-only disable-only mask-only'
                 ;;
             --output|-o)
                 comps=$( systemctl --output=help 2>/dev/null )
