--- a/units/systemd-journal-flush.service
+++ b/units/systemd-journal-flush.service
@@ -20,8 +20,8 @@ Wants=systemd-journald.service
 After=systemd-journald.service
 RequiresMountsFor=/var/log/journal
 
-Before=soft-reboot.target systemd-soft-reboot.service
-Conflicts=soft-reboot.target
+Before=soft-reboot.target systemd-soft-reboot.service umount.target
+Conflicts=soft-reboot.target umount.target
 
 [Service]
 ExecStart=journalctl --flush
