coredump: introduce varlink interface to register core pattern
This adds new mode to invoke systemd-coredump executable. When invoked with
'--register' option, it accepts a varlink method to set new core pattern to
/proc/sys/kernel/core_pattern. This is necessary as the core pattern cannot
be registered from sandboxed environment, but we'd like to run the main
service, which will be added in later commit, in a sandbox.

--- a/units/meson.build
+++ b/units/meson.build
@@ -313,6 +313,15 @@ units = [
           'conditions' : ['ENABLE_COREDUMP'],
         },
         {
+          'file' : 'systemd-coredump-register.socket',
+          'conditions' : ['ENABLE_COREDUMP'],
+          'symlinks' : ['sockets.target.wants/'],
+        },
+        {
+          'file' : 'systemd-coredump-register@.service.in',
+          'conditions' : ['ENABLE_COREDUMP'],
+        },
+        {
           'file' : 'systemd-creds.socket',
           'symlinks' : ['sockets.target.wants/'],
         },
