--- a/src/resolve/meson.build
+++ b/src/resolve/meson.build
@@ -148,6 +148,9 @@ executables += [
                 'sources' : files('test-dns-query.c'),
         },
         resolve_test_template + {
+                'sources' : files('test-dns-server-policy.c'),
+        },
+        resolve_test_template + {
                 'sources' : files('test-resolved-stream.c'),
         },
         resolve_test_template + {
