--- a/units/systemd-pcrproduct.service.in
+++ b/units/systemd-pcrproduct.service.in
@@ -14,6 +14,7 @@ DefaultDependencies=no
 Conflicts=shutdown.target
 After=tpm2.target
 Before=sysinit.target shutdown.target
+RequiresMountsFor=/var/lib/systemd
 ConditionPathExists=!/etc/initrd-release
 ConditionSecurity=measured-uki
 
