cryptenroll,cryptsetup: only call mlockall if we have CAP_IPC_LOCK
Calling mlockall in an unprivileged process most notably had the effect
of making systemd-cryptenroll OOM while trying to open a normal-sized
argon2 keyslot due to it hitting RLIMIT_MEMLOCK.

--- a/src/cryptsetup/meson.build
+++ b/src/cryptsetup/meson.build
@@ -18,6 +18,7 @@ executables += [
                 'public' : true,
                 'sources' : systemd_cryptsetup_sources,
                 'dependencies' : [
+                        libcap,
                         libcryptsetup,
                         libmount_cflags,
                         libopenssl,
