mountfsd: Add ChownDirectory()
In mkosi, the build is done entirely unprivileged as the current user.
For various reasons it's rather complicated to deal with using a foreign
uid range user namespace to make sure the image files are owned by the
foreign uid range.

Instead, let's add a ChownDirectory() varlink call to mountfsd to recursively
chown a directory to the foreign uid range root user. All inodes in the
directory have to be owned by the peer uid/gid. Any inodes not owned by the
peer uid/gid are skipped.

If the caller is privileged we allow chowning from any uid/gid to the foreign
uid range.

To make this work we have to add CAP_FOWNER to allow dropping posix ACLs and
remove RestrictSUIDSGID= as we need to be able to restore modes after chown()
including suid/sgid.

--- a/units/systemd-mountfsd.service.in
+++ b/units/systemd-mountfsd.service.in
@@ -18,7 +18,7 @@ Before=sysinit.target shutdown.target
 DefaultDependencies=no
 
 [Service]
-CapabilityBoundingSet=CAP_DAC_READ_SEARCH CAP_SYS_RESOURCE CAP_BPF CAP_PERFMON CAP_SETGID CAP_SETUID CAP_DAC_OVERRIDE CAP_CHOWN CAP_SYS_ADMIN
+CapabilityBoundingSet=CAP_DAC_READ_SEARCH CAP_SYS_RESOURCE CAP_BPF CAP_PERFMON CAP_SETGID CAP_SETUID CAP_DAC_OVERRIDE CAP_CHOWN CAP_SYS_ADMIN CAP_FOWNER
 ExecStart={{LIBEXECDIR}}/systemd-mountfsd
 IPAddressDeny=any
 LimitNOFILE={{HIGH_RLIMIT_NOFILE}}
@@ -28,7 +28,6 @@ NoNewPrivileges=yes
 ProtectHostname=yes
 RestrictAddressFamilies=AF_UNIX AF_NETLINK AF_INET AF_INET6
 RestrictRealtime=yes
-RestrictSUIDSGID=yes
 
 # FIXME: libseccomp (as of 2.6.0) doesn't know the open_tree_attr() system call
 # yet which we need. Thus, applying any system call filter would block this
