meson: Remove all vmlinux.h handling
Since vmlinux.h is no longer required, all related build system code can
be removed.

Make ENABLE_SYSCTL_BPF depend on BPF_FRAMEWORK instead of
HAVE_VMLINUX_H.

--- a/src/nsresourced/bpf/userns-restrict/meson.build
+++ b/src/nsresourced/bpf/userns-restrict/meson.build
@@ -7,8 +7,7 @@ endif
 userns_restrict_bpf_o_unstripped = custom_target(
         input : 'userns-restrict.bpf.c',
         output : 'userns-restrict.bpf.unstripped.o',
-        command : bpf_o_unstripped_cmd,
-        depends : vmlinux_h_dependency)
+        command : bpf_o_unstripped_cmd)
 
 userns_restrict_bpf_o = custom_target(
         input : userns_restrict_bpf_o_unstripped,
