--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,9 @@ updates:
     groups:
       actions:
         patterns:
-          - "*"      
+          - "*"
+        exclude-patterns:
+          - "mkosi"
     open-pull-requests-limit: 2
   - package-ecosystem: "pip"
     directory: "/.github/workflows"
