--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
         patterns:
           - "*"
         exclude-patterns:
-          - "mkosi"
+          - "systemd/mkosi"
     open-pull-requests-limit: 2
   - package-ecosystem: "pip"
     directory: "/.github/workflows"
