shared: extract snapshot creation of {n,vm}spawn into a helper
This commit extracts the creation of the snapshot directory for
{n,vm}spawn into a shared helper. Its not a lot of code but its
subtle so having a single place seems beneficial.

With that we can simplify the snapshot delete and error handling
as well.

--- a/src/shared/meson.build
+++ b/src/shared/meson.build
@@ -177,6 +177,7 @@ shared_sources = files(
         'sleep-config.c',
         'smack-util.c',
         'smbios11.c',
+        'snapshot-util.c',
         'socket-label.c',
         'socket-netlink.c',
         'specifier.c',
